Fri Mar 18 10:36:32 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/EC_Custom_Marshal/svc.conf:
	* orbsvcs/tests/EC_Throughput/ec.conf:

	  These two tests require that the ORB not drop replies during
	  shutdown.  Therefore added that strategy. If this strategy is
	  not used EC would exit with a COMM_FAILURE exception. 

Fri Mar 18 10:34:48 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* tao/Transport.cpp:
	* tao/Transport.h (provide_blockable_handler):

	  Return a bool instead of void. 
	
	* tao/Transport_Cache_Manager.cpp:

	  Check for the return value from provide_blockable_handler before
	  marking the entry as closed.  

Fri Mar 18 09:26:32 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Faults/client.cpp:

	  Added an additional check to omit COMM_FAILURE exceptions when
	  doing a self shutdown test. This shodl address test failures in
	  our daily builds.

Fri Mar 18 10:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_MT_Mcast/Consumer.cpp:
        * orbsvcs/tests/EC_MT_Mcast/MCast.cpp:
        * orbsvcs/tests/EC_MT_Mcast/Supplier.cpp:
          Removed empty explicit template instantiation blocks

Fri Mar 18 10:27:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.{h,cpp}:
          Removed _optimize_collocation_objects, it is not used

Fri Mar 18 09:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_Custom_Marshal/ECM_Consumer.cpp:
        * orbsvcs/tests/EC_Custom_Marshal/ECM_Supplier.cpp:
          Print out whether we get an exception in the client or in the server

Thu Mar 17 11:00:57 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.ac:

	  Add no-define to AC_INIT_AUTOMAKE so that PLATFORM and VERSION
	  are not defined in config.h.

Thu Mar 17 09:02:28 2005  Ciju John  <john_c@ociweb.com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Acceptor.cpp: