@@ -1,3 +1,9 @@
+Fri Mar 18 10:58:48 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* docs/Options.html (below): 
+
+	  Added documentation for -ORBDropRepliesonShutdown. 
+
 Fri Mar 18 10:36:32 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* orbsvcs/tests/EC_Custom_Marshal/svc.conf:
